k8/service.yaml
apiVersion: v1
kind: Service
metadata:
 name: phpservice
 labels:
   app: phpservice
spec:
 type: NodePort
 selector:
   app: phpsvc
 ports:
  - protocol: TCP
    name: phpservice
    port: 80
    targetPort: 80
